/**
 * @file CarLaneTrafficLightState.hpp
 * @author Vladislav Stefanov
 * @version 2.0
 */

#pragma once

namespace TrafficLights
{
    enum CarLaneTrafficLightState
    {
        GREEN,
        ORANGE,
        RED
    };
}
